--- a/Footer.css
+++ b/Footer.css
@@ -1,4 +1,5 @@
 /* Footer.css */
+/* Footer.css */
 .footer {
   background-color: rgb(14, 14, 14);
   border-top: 2px solid rgb(14, 14, 14);
@@ -10,3 +11,4 @@
   font-size: 14px; /* Adjust the font size as needed */
   padding: 0px 0;
 }
+
